[gd_scene load_steps=13 format=3 uid="uid://da61af5kfk5ik"]

[ext_resource type="Script" path="res://enemy.gd" id="1_c7qjt"]
[ext_resource type="Texture2D" uid="uid://bysw70gw27g6a" path="res://Textures/enemigo1.png" id="2_vyp6j"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r0gqy"]
size = Vector2(31, 20)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0hdx6"]
radius = 20.0
height = 40.0

[sub_resource type="AtlasTexture" id="AtlasTexture_ms8oy"]
atlas = ExtResource("2_vyp6j")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j3tob"]
atlas = ExtResource("2_vyp6j")
region = Rect2(64, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_3q7bq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ms8oy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j3tob")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_gf7xr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_2btgx"]
resource_name = "damage"
length = 0.1
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0504475, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_2xknv"]
resource_name = "flash"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_h0bwp"]
resource_name = "rest"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fjqwq"]
_data = {
"RESET": SubResource("Animation_gf7xr"),
"damage": SubResource("Animation_2btgx"),
"flash": SubResource("Animation_2xknv"),
"rest": SubResource("Animation_h0bwp")
}

[node name="enemy" type="CharacterBody2D" groups=["persistent"]]
script = ExtResource("1_c7qjt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3.5, 3)
shape = SubResource("RectangleShape2D_r0gqy")

[node name="Enemy_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy_area"]
position = Vector2(4, 2)
shape = SubResource("CapsuleShape2D_0hdx6")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(7, 0)
sprite_frames = SubResource("SpriteFrames_3q7bq")
animation = &"walk"
autoplay = "walk"
frame_progress = 0.813132
flip_h = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_fjqwq")
}

[node name="Invunerability" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="Abajo" type="RayCast2D" parent="."]
position = Vector2(21, -7)
rotation = 3.14159
scale = Vector2(2.76335, -1.34614)
target_position = Vector2(5.05447e-05, 41.6004)

[connection signal="area_entered" from="Enemy_area" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Enemy_area" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Invunerability" to="." method="_on_invunerability_timeout"]
